fixed qrcode not square on small device

--- a/app/assets/stylesheets/v1/components/links-bar.scss
+++ b/app/assets/stylesheets/v1/components/links-bar.scss
@@ -2,19 +2,21 @@
   display: flex;
   flex-flow: row nowrap;
   > .links-app {
+    flex-shrink: 1;
     max-width: 160px;
     max-height: 120px;
     margin-right: 20px;
   }
   > .qrcode {
     margin-left: auto;
-    width: 120px;
-    height: 120px;
+    max-width: 120px;
+    max-height: 120px;
+    flex: 0 0 120px;
   }
   @media (max-width: $screen-sm) {
     > .qrcode {
-      width: 80px;
-      height: 80px;
+      max-width: 80px;
+      max-height: 80px;
     }
   }
 }
